# rimap

./: Cargo.toml  LICENSE  imap.pest
.github/workflows/: rust.yml
src/: error.rs  imapconnection.rs  lib.rs  tag.rs
src/client/: mod.rs
src/error/: mod.rs
src/net/: asyncstream.rs  mod.rs
src/parser/: grammar.rs  imap.pest  mod.rs  response.rs  tests.rs  types.rs
src/parser/rfc3501/: body.rs  core.rs  grammar.rs  mod.rs
src/parser/tests/: mod.rs  tests.rs
