[package]
name = "rimap"
version = "0.1.0"
authors = ["Ilya Filtsin <ilfiltsin@gmail.com>"]
description = "Async IMAP client for Rust"
license = "MIT"
categories = ["email"]
edition = "2018"

keywords = ["imap", "imap-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["net", "sync", "rt"] }
tokio-util = { version = "0.6.6", features = ["codec"] }
futures = "0.3"
thiserror = "1.0.24"
log = "0.4"
nom = "6.2"
